--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+// dark,light mode
+
+html.dark {
+    --bg-color: #1a202c;
+    --text-color: #f7fafc; 
+  }
+  
+  body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+  }
+
+// search icon 
+  .fixed {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.inset-0 {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.bg-opacity-90 {
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.z-50 {
+    z-index: 50;
+}
+
+  
